# rc-clone-am

./: .gitmodules  CMakeLists.txt
assets/: rc-truck.mtl  track_segments.mtl  tree.mtl
src/: load_obj.h  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
tests/: CMakeLists.txt  test_objFileLoader.cpp
